@@ -12,12 +12,13 @@ using Roguelike.Common.Utils;
 namespace Roguelike.Contents.Items.Weapon.ArcaneRange.MoonStarBow {
 	internal class MoonStarBow : SynergyModItem {
 		public override void SetDefaults() {
-			Item.BossRushDefaultRange(18, 32, 33, 1f, 2, 10, ItemUseStyleID.Shoot, ModContent.ProjectileType<MoonStarProjectile>(), 5f, true);
+			Item.BossRushDefaultRange(18, 32, 56, 1f, 2, 10, ItemUseStyleID.Shoot, ModContent.ProjectileType<MoonStarProjectile>(), 5f, true);
 			Item.reuseDelay = 5;
 			Item.rare = ItemRarityID.LightRed;
 			Item.value = Item.buyPrice(gold: 50);
 			Item.UseSound = SoundID.Item75;
 			Item.DamageType = DamageClass.Magic;
+			Item.mana = 16;
 		}
 		int count = 0;
 		public override void SynergyShoot(Player player, PlayerSynergyItemHandle modplayer, EntitySource_ItemUse_WithAmmo source, Vector2 position, Vector2 velocity, int type, int damage, float knockback, out bool CanShootItem) {
